# admyral-quickstart

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
workflows/: analyze_url.py  virus_total_workflow.py
workflows/analyze_url/: README.md
workflows/github_audit_logs_owner_changes/: README.md
workflows/jira_notification_user_created/: README.md  jira_notification_user_created.py
workflows/list_okta_admins/: README.md  list_okta_admins.py
workflows/monitor_github_org_owner_changes/: README.md  github_audit_logs_owner_changes.py  monitor_github_org_owner_changes.py
workflows/okta_password_policy_monitoring/: README.md
workflows/okta_use_it_or_lose_it/: README.md  slack_interactivity.py
workflows/one_password_user_added_to_vault/: README.md
workflows/panther_alert_handling/: README.md
workflows/panther_slack_interactivity/: README.md
workflows/retool_access_review/: README.md  slack_interactivity.py
workflows/retool_use_it_or_loose_it/: README.md
workflows/slack_interactivity/: README.md
workflows/template/: README.md
workflows/vulnerability_sla_breach/: README.md  vulnerability_sla_breach.py
