[tool.poetry]
name = "admyral-quickstart"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
admyral = "^0.1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
